<resources>
    <string name="app_name">Quiz App</string>
    <string name="marvel">MARVEL</string>
    <string name="quiz_name">Test your Marvel\'s knowledge</string>
    <string name="name">What is your name?</string>
    <string name="firstQuestion">1. What is Peter Parker\'s middle name?</string>
    <string name="first_a">William</string>
    <string name="first_b">Benjamin</string>
    <string name="secondQuestion">2. Captain America\'s shield was made from...</string>
    <string name="second_a">Adamantium</string>
    <string name="second_b">Vibranium</string>
    <string name="thirdQuestion">3. Which organization is a world-wide subversive dedicated to global domination?</string>
    <string name="third_a">HYDRA</string>
    <string name="third_b">S.H.I.E.L.D.</string>
    <string name="fourthQuestion">4. Which character is not part of the Marvel Universe? (Be careful)</string>
    <string name="fourth_a">Rocket Raccoon</string>
    <string name="fourth_b">Wonder Woman</string>
    <string name="fourth_c">Thanos</string>
    <string name="fourth_d">Flash</string>
    <string name="fifthQuestion">5. Which real person has a cameo role regularly in the Marvel series?</string>
    <string name="fifth_a">Bob Kane</string>
    <string name="fifth_b">Stan Lee</string>
    <string name="sixthQuestion">6. What is Black Widow\'s real name?</string>
    <string name="sixth_a">Natalia Romanova</string>
    <string name="sixth_b">Natalia Ravenova</string>
    <string name="seventhQuestion">7. In \'Civil War\', Captain America fought against...</string>
    <string name="seventh_a">Nick Fury</string>
    <string name="seventh_b">Iron Man</string>
    <string name="eightQuestion">8. Pepper Potts allergic to...</string>
    <string name="eight_a">Blackberries</string>
    <string name="eight_b">Strawberries</string>
    <string name="eight_c">Apple</string>
    <string name="ninthQuestion">9. What is the real name of Captain America?</string>
    <string name="ninth_a">Steve Rogers</string>
    <string name="ninth_b">Peter Parker</string>
    <string name="ninth_c">Bucky Barnes</string>
    <string name="tenthQuestion">10. Which famous character is not part of the Avengers? (Consider your answer)</string>
    <string name="tenth_a">Ant-Man</string>
    <string name="tenth_b">Spider-Man</string>
    <string name="tenth_c">Iron Man</string>
    <string name="tenth_d">Star-Lord</string>
    <string name="typing">Type your answer here:</string>
    <string name="typing_answer">Your answer</string>
    <string name="maximum">You could reach 10 maximum points.</string>
    <string name="result">Show the result</string>
    <string name="points">/10 points</string>
    <string name="try_again">Try again</string>
    <string name="start">Start Quiz</string>
</resources>

